--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,8 @@
 @plugin "@tailwindcss/typography";
 @plugin "@tailwindcss/forms";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 @theme {
     --font-sans: var(--font-inter);
 }
